crates/alder-can/src/snapshots/alder_can__module__tests__unused_func_arg_warning.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf x = 42\n"
---
[
    UnusedVariable {
        region: Region {
            start: Position {
                line: 3,
                column: 3,
            },
            end: Position {
                line: 3,
                column: 4,
            },
        },
        context: Pattern,
        name: "x",
    },
]
