crates/alder-can/src/snapshots/alder_can__module__tests__unused_import_warning.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Foo\n\nx = 1\n"
---
[
    UnusedImport {
        region: Region {
            start: Position {
                line: 3,
                column: 8,
            },
            end: Position {
                line: 3,
                column: 11,
            },
        },
        module_name: "Foo",
    },
]
