crates/alder-can/src/snapshots/alder_can__module__tests__unused_lambda_arg.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = \\x -> 1\n"
---
[
    UnusedVariable {
        region: Region {
            start: Position {
                line: 3,
                column: 6,
            },
            end: Position {
                line: 3,
                column: 7,
            },
        },
        context: Pattern,
        name: "x",
    },
]
